Dark mode easy fix

--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -13,6 +13,11 @@
 //@import "fullscreen";
 
 
+body {
+  background-color: white;
+  color: black;
+}
+
 .info-ball {
   cursor: pointer;
 }
@@ -20,7 +25,6 @@
 .element-atom,
 .interactive-atom {
   margin: 0 !important;
-  background: none !important;
   padding-bottom: 6px !important;
   padding-top: 10px !important;
 }
@@ -182,6 +186,7 @@ canvas {
 
 .ios,
 .android {
+
   .article {
     overflow: visible !important;
   }
